--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
+    <script type='text/javascript' src='//pl23043585.highcpmgate.com/15/41/d9/1541d9a61bf2e6117f5d92c9e755401a.js'></script>        <!-- Adsera Ad -->
+
 </head>
 <body>
     <div class="clock">
@@ -27,5 +29,6 @@
     </div>
 
     <script src="main.js"></script>
+    <div>Version 0.1</div>
 </body>
 </html>
