--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
-    <script type='text/javascript' src='//pl23043585.highcpmgate.com/15/41/d9/1541d9a61bf2e6117f5d92c9e755401a.js'></script>        <!-- Adsera Ad -->
+          <!-- Adsera Ad -->
+    <script type='text/javascript' src='//pl23136667.highcpmgate.com/dd/21/46/dd214675bf5c8d07e273ec20023d9cbb.js'></script>
+    
 
 </head>
 <body>
@@ -29,6 +31,8 @@
     </div>
 
     <script src="main.js"></script>
-    <div>Version 0.1</div>
+    <div>Version 0.2</div>
+    <script async="async" data-cfasync="false" src="//pl23136675.highcpmgate.com/e50f4406b585123ac87dd051697a7309/invoke.js"></script>
+<div id="container-e50f4406b585123ac87dd051697a7309"></div>
 </body>
 </html>
