--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
     <div class="clock">
+        
         <h1 class="time">08:37</h1>
         <div class="details">
             <h3 class="ampm">PM</h3>
@@ -27,12 +28,17 @@
             <span class="month">Mar</span>,
             <span class="dayofweek">Sunday</span>
             <span class="day">6</span>
+                <span>Version 0.3</span>
+
         </h2>
     </div>
 
     <script src="main.js"></script>
-    <div>Version 0.2</div>
+    
     <script async="async" data-cfasync="false" src="//pl23136675.highcpmgate.com/e50f4406b585123ac87dd051697a7309/invoke.js"></script>
 <div id="container-e50f4406b585123ac87dd051697a7309"></div>
+    <a href="https://www.highcpmgate.com/fv5iid3p?key=f1e99703a196bac73861932ddc2a77a6">Click here to earn!</a>
+    <script type='text/javascript' src='//pl23136876.highcpmgate.com/40/cd/fe/40cdfe4e268bd2ba734332c799734025.js'></script>
+
 </body>
 </html>
