--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
-          <!-- Adsera Ad -->
-    <script type='text/javascript' src='//pl23136667.highcpmgate.com/dd/21/46/dd214675bf5c8d07e273ec20023d9cbb.js'></script>
-    
-
+    <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="179379"></script>
+    <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="179377"></script>
+    <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="179373"></script>
+    <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="179371"></script>
+    <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="179369"></script>
+    <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="179367"></script>
 </head>
 <body>
     <div class="clock">
@@ -28,17 +30,11 @@
             <span class="month">Mar</span>,
             <span class="dayofweek">Sunday</span>
             <span class="day">6</span>
-                <span>Version 0.3</span>
-
         </h2>
     </div>
 
     <script src="main.js"></script>
     
-    <script async="async" data-cfasync="false" src="//pl23136675.highcpmgate.com/e50f4406b585123ac87dd051697a7309/invoke.js"></script>
-<div id="container-e50f4406b585123ac87dd051697a7309"></div>
-    <a href="https://www.highcpmgate.com/fv5iid3p?key=f1e99703a196bac73861932ddc2a77a6">Click here to earn!</a>
-    <script type='text/javascript' src='//pl23136876.highcpmgate.com/40/cd/fe/40cdfe4e268bd2ba734332c799734025.js'></script>
 
 </body>
 </html>
